--- a/src/station1.html
+++ b/src/station1.html
@@ -7,6 +7,12 @@
     <title>Station 1</title>
   </head>
   <body>
-
+    <main>
+      <ul>
+        <li>りんご</li>
+        <li>ばなな</li>
+        <li>ぶどう</li>
+      </ul>
+    </main>
   </body>
 </html>
