--- a/src/station12.html
+++ b/src/station12.html
@@ -9,7 +9,9 @@
   <body>
     <!-- この<p>の中にレスポンスをコピペする -->
     <p>
-
+      { "message":
+      "https:\/\/images.dog.ceo\/breeds\/pointer-germanlonghair\/hans3.jpg",
+      "status": "success" }
     </p>
     <button onclick="fetchApi()">リクエスト</button>
   </body>
